feat: create secret code page

--- a/views/secretCodeView/secretCode.ejs
+++ b/views/secretCodeView/secretCode.ejs
@@ -55,6 +55,7 @@
                       type="password"
                       id="secretPassword"
                       name="secretPassword"
+                      required
                     />
                   </li>
                   <li>
