feat: add required to inputs

--- a/views/createMessageView/createMessage.ejs
+++ b/views/createMessageView/createMessage.ejs
@@ -15,6 +15,7 @@
               type="text"
               id="message_title"
               name="message_title"
+              required
             />
           </li>
           <li>
@@ -27,6 +28,7 @@
               minlength="3"
               maxlength="255"
               draggable="false"
+              required
             ></textarea>
           </li>
           <li>
